--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,13 @@
-<p>
-  product works!
-</p>
+<div *ngFor="let product of products" class="col-lg-4 col-md-4 col-sm-4">
+    <div class="thumbnail">
+        <img src="http://placehold.it/320X150" alt="">
+        <div class="caption">
+            <h4 class="pull-right">{{product.price}}</h4>
+            <h4><a>{{product.title}}</a></h4>
+            <p>{{product.desc}}</p>
+        </div>
+        <div>
+            <app-starts></app-starts>
+        </div>
+    </div>
+</div>
