--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -7,7 +7,7 @@
             <p>{{product.desc}}</p>
         </div>
         <div>
-            <app-starts [rating]="product.rating"></app-starts>
+            <app-stars [rating]="product.rating"></app-stars>
         </div>
     </div>
 </div>
