--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,5 +1,28 @@
-<h2>{{productTitle}}</h2>
-<p>
-    
-   <img src="http://placehold.it/830X230" />
-</p>
+
+<div class="thumbail">
+    <img src="http://placehold.it/830X230" />
+    <div>
+        <h4 class="pull-right">{{product.price}}元</h4>
+        <h4>{{product.title}}</h4>
+        <p>{{product.desc}}</p>
+    </div>
+    <div>
+        <p class="pull-right">{{comments.length}}</p>
+        <p>
+            <app-stars [rating]="product.rating"></app-stars>
+        </p>
+    </div>
+</div>
+
+<!-- all of comments -->
+<div class="well">
+    <div class="row" *ngFor="let comment of comments">
+        <hr>
+        <div class="col-md-12">
+            <app-stars [rating]="comment.rating"></app-stars>
+            <span>{{comment.user}}</span>
+            <span class="pull-right">{{comment.timestamp}}</span>
+            <p>{{comment.content}}</p>
+        </div>
+    </div>
+</div>
